Addressing a dialog button visibility issue

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -246,6 +246,10 @@ a:hover { border-color: #222; }
     z-index: 103; /* needs to be above .md-dialog */
 }
 
+.md-dialog .md-dialog-actions button {
+    border: 2px solid transparent; /* fixing a strange button visibility issue */
+}
+
 
 /* WYSIWYG style overrides */
 .jodit-container { width: 100% !important; }
